# cod-form

./: .env.example  .gitignore  LAUNCH_PLAN.md  MULTI_PRODUCT_PLAN.md  package-lock.json  package.json  pyproject.toml  shopify.app.toml
app/: auth.py  config.py  main.py  schemas.py  session.py
app/db/: pool.py  schema.sql
app/db/migrations/: 001_initial.sql  003_billing.sql  (+2 more)
app/routers/: admin_analytics.py  admin_billing.py  admin_blacklist.py  admin_config.py  admin_orders.py  admin_products.py  proxy.py  storefront.py  webhooks.py
app/services/: abandoned.py  bumps.py  events.py  fraud.py  locale.py  offers.py  otp.py  store_config.py  upsells.py  whatsapp.py
app/shopify/: abandoned.py  billing.py  discounts.py  orders.py  products.py  tokens.py
extensions/cod-form/: shopify.extension.toml
scripts/: add_block_all_templates.py  add_block_everywhere.py  add_bottle_offers.py  add_cod_to_genunchere.py  add_error_divs.py  add_section_all.py  apply_all_products.py  check_css.py  copy_offers_style.py  deploy_bebemate_pl.py  deploy_prietenbebe.py  find_ext_block.py  fix_bebemate_css.py  fix_bottle_offers.py  fix_bump_images.py  fix_bump_images_v2.py  fix_bumps_final.py  fix_prietenbebe_css.py  fix_section_no_translations.py  fix_upsell_discount.py  inspect_main_blocks.py  inspect_template.py  migrate.py  migrate_stores.py  remove_retry.py  restore_section.py  setup_prietenbebe.py  update_prietenbebe_config.py
tests/: conftest.py  test_auth.py  test_billing.py  test_storefront.py
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx
(+37 files in other folders)
